# market_data_dwndr

./: .gitignore  compose.yaml  test_fetch.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  logging_config.py  main.py  server.py  session.py  session_service.py
backend/app/api/: __init__.py  auth.py  capture.py  health.py  stats.py  status.py
backend/app/bin_codec/: __init__.py  compress.py  layout.py  reader.py  writer.py
backend/app/capture/: __init__.py  bootstrap.py  broadcaster.py  engine.py  maintenance.py  monitor.py  reconnect.py  run.py  snapshot.py  writer_thread.py
backend/app/chain/: __init__.py  assembler.py  config.py  filter.py  table.py
backend/app/kite/: auth.py  (+10 more)
backend/tests/: conftest.py  test_auth.py  test_auth_api.py  test_board.py  test_bootstrap.py  test_broadcaster.py  test_calendar.py  test_calendar_scheduler.py  test_capture.py  test_capture_api.py  test_capture_maintenance.py  test_capture_run.py  test_chain.py  test_compress.py  test_config.py  test_daily_automation.py  test_eod.py  test_external_rate.py  test_external_token.py  test_health.py  test_historical_assembly.py  test_historical_core.py  test_historical_jobs.py  test_instruments.py  test_layout.py  test_login.py  test_login_flow.py  test_monitor.py  test_monitor_page.py  test_operator_auth.py  test_quotes.py  test_reconstruct_bs.py  test_reconstruct_metrics.py  test_retention.py  test_roundtrip.py  test_session_manager.py  test_stats_api.py  test_stats_store.py  test_status_api.py  test_table_matrix.py  (+6 more)
(+145 files in other folders)
