[project]
name = "market-data-dwndr"
version = "0.1.0"
description = "Zerodha Kite market-data downloader (capture only, no trading)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

# Runtime dependencies. The BIN codec (Phase 1) needs only numpy + zstandard;
# the rest support later phases (Kite integration, FastAPI service, historical).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
    "zstandard>=0.22",
    "httpx>=0.27",
    "kiteconnect>=5.0",
    "aiolimiter>=1.1",
]

[project.scripts]
md-serve = "app.server:main"
md-login = "app.kite.login:main"
md-capture = "app.capture.run:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
